Fixes image overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   flex-flow: column nowrap;
   justify-content: space-between;
 
+  max-width: 100vw;
   height: 100vh;
 }
 
 .slide-background {
   position: absolute;
   z-index: -1;
-  // width: 100%;
+  width: 100%;
   max-height: 100vh;
   overflow: hidden;
 }
